# AirDropd

./: .gitignore  Cargo.toml  README.md  build-installer.bat  build.bat  build.rs
.cargo/: config.toml
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
OWDL/: Cargo.toml
OWDL/src/: channel.rs  constants.rs  daemon.rs  frame.rs  lib.rs  peers.rs  transport.rs  wire.rs
apple/: Cargo.toml  build-all-macos.sh  build-macos.sh
apple/packaging/: Info.plist  generate-icons.sh  generate_dmg_background.swift  make-dmg.sh
apple/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: config.rs  lib.rs
core/src/licensing/: fingerprint.rs  key.rs  limits.rs  mod.rs  store.rs
core/src/network/: ble.rs  discovery.rs  firewall.rs  mod.rs  util.rs
core/src/protocols/: http_server.rs  incoming_transfer.rs  mod.rs  tls_store.rs  webdrop.rs
core/src/ui/: assets.rs  components.rs  device_icons.rs  distance.rs  icons.rs  messages.rs  mod.rs  qr.rs  radar.rs  styles.rs  tray.rs  widgets.rs
core/src/ui/views/: about_view.rs  device_form.rs  device_list_view.rs  dj_mode_view.rs  main_view.rs  mod.rs  registration_view.rs  settings_view.rs  splash_view.rs  webdrop_view.rs
core/src/utils/: mod.rs
docs/: DOCUMENTATION.md
installer/: AirDropd.iss  intro.txt
scripts/: process-icon.py
src/: activity.rs  config.rs  main.rs
src/network/: ble.rs  ble_advertise.rs  discovery.rs  firewall.rs  mdns_hub.rs  mod.rs
src/protocols/: airdrop.rs  airdrop_client.rs  apple_plist.rs  apple_records.rs  awdl.rs  cpio_extract.rs  http_server.rs  incoming_transfer.rs  mod.rs
src/ui/: app.rs  assets.rs  components.rs  messages.rs  mod.rs  radar.rs  styles.rs  tray.rs  widgets.rs  window.rs
src/ui/components/: error_dialog.rs
src/ui/views/: about_view.rs  activity_view.rs  main_view.rs  mod.rs  settings_view.rs
src/utils/: error.rs
tools/airdropd-keygen/: Cargo.toml
tools/airdropd-keygen/src/: main.rs
windows/: Cargo.toml  build-windows.bat  build-windows.sh  build.rs
windows/installer/: AirDropd.iss  license.txt
windows/src/: main.rs
