[package]
name = "OWDL"
version = "0.1.0"
edition = "2021"
description = "Open Wireless Direct Link — AWDL protocol stub for AirDropd"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
byteorder = "1.4"
bytes = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hashbrown = "0.14"
indexmap = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"] }
